[package]
name = "tlsn-attestation-example"
version = "0.1.0"
edition = "2024"

[dependencies]
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12" }
notary-client = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12", default-features = false }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12" }
tls-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12", package = "tlsn-tls-core" }
clap = { version = "4.5", features = ["derive", "env"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = "0.1.14"
http-body-util = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio-util = "0.7.15"
hex = "0.4.3"
chrono = "0.4.30"
tokio = { version = "1.45.1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
macro_rules_attribute = "0.2.2"
smol-macros = "0.1.1"
bincode = { version = "1.3.2" }
thiserror = "2.0.12"
pest = "2.8.0"
pest_derive = "2.8.0"
smol = "2.0.2"
smol-hyper = "0.1.1"
